--- a/part0/0.4: New note diagram.md
+++ b/part0/0.4: New note diagram.md
@@ -1,4 +1,3 @@
-````
 ```mermaid
 sequenceDiagram
     participant browser
@@ -25,5 +24,11 @@ sequenceDiagram
     activate server
     server-->>browser: [{ "content": "HTML is easy", "date": "2023-1-1" }, ... ]
     deactivate server
+    
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
+    activate server
+    server-->>browser: HTTP Status Code 302
+    deactivate server
+    
+    Note right of browser: The server responds with a URL redirect, causing the page to be reloaded, repeating the process until another POST request is issued.
 ```
-````
